--- a/src/main/java/com/yunjing/eseal/tools/esealClient.form
+++ b/src/main/java/com/yunjing/eseal/tools/esealClient.form
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.yunjing.eseal.tools.esealClient">
-  <grid id="27dc6" binding="client" layout-manager="GridLayoutManager" row-count="12" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="client" layout-manager="GridLayoutManager" row-count="11" column-count="10" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="-5" y="20" width="870" height="707"/>
+      <xy x="-5" y="20" width="656" height="707"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="8e780" class="javax.swing.JTextField" binding="textField_ip">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="127.0.0.1:8080"/>
-        </properties>
-      </component>
       <component id="49068" class="javax.swing.JButton" binding="button_pdf">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="96" height="30"/>
           </grid>
         </constraints>
@@ -28,73 +18,9 @@
           <text value="pdf..."/>
         </properties>
       </component>
-      <component id="98cc5" class="javax.swing.JCheckBox" binding="hexStringCheckBox" default-binding="true">
-        <constraints>
-          <grid row="11" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <selected value="true"/>
-          <text value="Hex String"/>
-        </properties>
-      </component>
-      <component id="1ea37" class="javax.swing.JTextField" binding="textField_cert">
-        <constraints>
-          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="bdaf0" class="javax.swing.JButton" binding="button_cert">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="96" height="30"/>
-          </grid>
-        </constraints>
-        <properties>
-          <horizontalAlignment value="0"/>
-          <text value="cert..."/>
-        </properties>
-      </component>
-      <component id="41926" class="javax.swing.JTextField" binding="textField_keyindex">
-        <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="6480e" class="javax.swing.JTextField" binding="textField_keypin">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="df2c1" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="96" height="17"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="key index"/>
-        </properties>
-      </component>
-      <component id="9faa8" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="96" height="17"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="key Auth"/>
-        </properties>
-      </component>
       <component id="1e625" class="javax.swing.JButton" binding="button_sign">
         <constraints>
-          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="117" height="30"/>
           </grid>
         </constraints>
@@ -105,7 +31,7 @@
       </component>
       <component id="35ab7" class="javax.swing.JButton" binding="button_verify">
         <constraints>
-          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <enabled value="false"/>
@@ -114,7 +40,7 @@
       </component>
       <component id="e113c" class="javax.swing.JTextField" binding="textField_pdf">
         <constraints>
-          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -122,7 +48,7 @@
       </component>
       <scrollpane id="6b87d">
         <constraints>
-          <grid row="2" column="3" row-span="9" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="5" row-span="6" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -139,46 +65,116 @@
       </scrollpane>
       <component id="b4cce" class="javax.swing.JTextField" binding="textField_hash">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="5" row-span="2" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties/>
       </component>
-      <component id="ef450" class="javax.swing.JTextField" binding="textField_esid">
+      <component id="9faa8" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="2" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="96" height="17"/>
           </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="cfb4c" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="esID"/>
+          <horizontalTextPosition value="0"/>
+          <text value="token"/>
         </properties>
+      </component>
+      <component id="6480e" class="javax.swing.JTextField" binding="textField_keypin">
+        <constraints>
+          <grid row="2" column="2" row-span="2" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="bdaf0" class="javax.swing.JButton" binding="button_cert">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="96" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <horizontalAlignment value="0"/>
+          <text value="cert..."/>
+        </properties>
+      </component>
+      <component id="536f2" class="javax.swing.JButton" binding="exportSignatureButton" default-binding="true">
+        <constraints>
+          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="false"/>
+          <text value="export signature"/>
+        </properties>
+      </component>
+      <component id="98cc5" class="javax.swing.JCheckBox" binding="hexStringCheckBox" default-binding="true">
+        <constraints>
+          <grid row="1" column="8" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="139" height="18"/>
+          </grid>
+        </constraints>
+        <properties>
+          <selected value="true"/>
+          <text value="Hex String"/>
+        </properties>
+      </component>
+      <component id="b8b2a" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="5" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="digest VS signature"/>
+        </properties>
+      </component>
+      <component id="1ea37" class="javax.swing.JTextField" binding="textField_cert">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
       <component id="c7417" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="96" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="10"/>
-          <text value="ip"/>
+          <horizontalTextPosition value="0"/>
+          <text value="server_ip"/>
         </properties>
       </component>
-      <component id="536f2" class="javax.swing.JButton" binding="exportSignatureButton" default-binding="true">
+      <component id="8e780" class="javax.swing.JTextField" binding="textField_ip">
         <constraints>
-          <grid row="11" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
         </constraints>
         <properties>
-          <enabled value="false"/>
-          <text value="export signature"/>
+          <text value="127.0.0.1:8080"/>
+        </properties>
+      </component>
+      <component id="c1746" class="javax.swing.JButton" binding="pingButton" default-binding="true">
+        <constraints>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="139" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="ping"/>
+        </properties>
+      </component>
+      <component id="e7f27" class="javax.swing.JSeparator">
+        <constraints>
+          <grid row="1" column="4" row-span="9" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <orientation value="1"/>
         </properties>
       </component>
     </children>
